src/trmd3-specific.css
/* BODY */

body {
}

.body-light-theme {
	background-image: linear-gradient(
		90deg,
		rgba(82, 196, 254, 0.3) 0%,
		rgba(248, 194, 255, 0.3) 100%
	);
}

.body-dark-theme {
	background: linear-gradient(
		90deg,
		rgb(82, 197, 254) 0%,
		rgb(248, 194, 255) 100%
	);
}

/* TRMD3 */

.logo-trmd3 {
	max-width: 300px;
	margin: 0 auto;
	padding-bottom: 20px;
	padding-top: 100px;
	width: 50vw;
}

.flex-trmd3 {
	display: flex;
}

.flex-column-trmd3 {
	flex-direction: column;
}

.flex-row-trmd3 {
	flex-direction: row;
}

.frame-label-trmd3 {
	text-align: center;
}

.hljs {
	background: linear-gradient(
		0deg,
		rgba(103, 80, 164, 0.08),
		rgba(103, 80, 164, 0.08)
	);
	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3),
		0px 2px 6px 2px rgba(0, 0, 0, 0.15);
	font-weight: bolder;
	margin: 0 auto;
	overflow: scroll;
	width: 80%;
	border-radius: 3px;
}

@media screen and (max-width: 600px) {
	.hljs {
		width: 20%;
	}
}

.hljs:hover {
	box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.15),
		0px 1px 3px rgba(0, 0, 0, 0.3);
}

/* TYPOGRAPHY */

.typography-display-section-trmd3 {
	box-sizing: border-box;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	padding: 24px;
	gap: 24px;
	border: 1px solid #79747e;
	border-radius: 16px;
}

/* ELEVATION */

.elevation-display-section-trmd3 {
	display: flex;
	flex-direction: row;
	align-items: flex-start;
	padding: 50px 60px;
	gap: 18px;
}

.elevation-box-trmd3 {
	width: 80px;
	height: 80px;
	border-radius: 16px;
}

.elevation-box-1-trmd3 {
	background: linear-gradient(
		0deg,
		rgba(103, 80, 164, 0.05),
		rgba(103, 80, 164, 0.05)
	);
}
.elevation-box-2-trmd3 {
	background: linear-gradient(
		0deg,
		rgba(103, 80, 164, 0.08),
		rgba(103, 80, 164, 0.08)
	);
}
.elevation-box-3-trmd3 {
	background: linear-gradient(
		0deg,
		rgba(113, 90, 174, 0.11),
		rgba(113, 90, 174, 0.11)
	);
}

.elevation-box-4-trmd3 {
	background: linear-gradient(
		0deg,
		rgba(103, 80, 164, 0.12),
		rgba(103, 80, 164, 0.12)
	);
}

.elevation-box-5-trmd3 {
	background: linear-gradient(
		0deg,
		rgba(103, 80, 164, 0.14),
		rgba(103, 80, 164, 0.14)
	);
}

/* HERO SECTION*/

.hero-section-trmd3 {
	display: flex;
	flex-direction: column;
	justify-content: center;
	margin-right: 5%;
	margin-left: 5%;
	text-align: center;
	overflow: hidden;
}

.hero-section-light-theme-trmd3 {
	color: #0088fc;
}

.hero-section-dark-theme-trmd3 {
	color: #ffffff;
}

.hero-features-trmd3 {
	list-style-type: none;
	margin-left: 0;
	padding-left: 0;
}

.hero-features-trmd3 > li {
	margin-bottom: 1rem;
}

/* THEME TOGGLING */

.theme-toggler-trmd3 {
	margin: 0 auto;
	width: 80%;
	position: sticky;
	top: 0;
	transform: translateY(10px);
}

/* HORIZONTAL DIVIDERS SECTION */

.horizontal-dividers-frame-trmd3 {
	align-items: center;
	justify-content: center;
	overflow: hidden;
	gap: 30px;
}

.horizontal-dividers-frame-light-theme-trmd3 {
	color: black;
}

.horizontal-dividers-frame-dark-theme-trmd3 {
	color: white;
}

/* VERTICAL DIVIDERS SECTION */

.vertical-dividers-frame-trmd3 {
	align-items: center;

	justify-content: center;
	gap: 40px;
}

.vertical-dividers-frame-light-theme-trmd3 {
	color: black;
}

.vertical-dividers-frame-dark-theme-trmd3 {
	color: white;
}

/* RADIO BUTTONS SECTION */

.radio-buttons-frame-trmd3 {
	flex-direction: row;
}

.radio-buttons-frame-light-theme-trmd3 {
	color: black;
}

.radio-buttons-frame-dark-theme-trmd3 {
	color: white;
}

@media screen and (max-width: 600px) {
	.radio-buttons-frame-trmd3 {
		flex-direction: column;
	}
}

/* SECTION TITLES */

.section-title-trmd3 {
	text-align: center;
	margin-top: 60px;
	margin-bottom: 10px;
}

.section-title-light-theme-trmd3 {
	color: black;
}

.section-title-dark-theme-trmd3 {
	color: white;
}

/* BADGES SECTION */

.badges-frame-trmd3 {
	align-items: center;
	justify-content: center;
	text-align: center;
}

.badges-frame-light-theme-trmd3 {
	color: black;
}

.badges-frame-dark-theme-trmd3 {
	color: white;
}

.badge-box-trmd3 {
	background-color: #f8af50;
	width: 50px;
	height: 50px;
	margin: 0 auto;
}

/* CHECKBOXES SECTION */

.checkboxes-frame-trmd3 {
	flex-direction: row;
	align-items: center;
	justify-content: center;
	gap: 5px;
}

@media screen and (max-width: 600px) {
	.checkboxes-frame-trmd3 {
		flex-direction: column;
	}
}

.checkboxes-frame-light-theme-trmd3 {
	color: black;
}

.checkboxes-frame-dark-theme-trmd3 {
	color: white;
}

.checkbox-label-trmd3 {
	text-align: center;
	line-height: 44px;
}

/* SWITCHES SECTION */

.switches-frame-trmd3 {
	flex-direction: row;
	align-items: center;
	justify-content: center;
	gap: 5px;
}

@media screen and (max-width: 600px) {
	.switches-frame-trmd3 {
		flex-direction: column;
	}
}

.switches-frame-light-theme-trmd3 {
	color: black;
}

.switches-frame-dark-theme-trmd3 {
	color: white;
}

/* BUTTONS SECTION */

/* TYPOGRAPHY SECTION */

/* ELEVATION SECTION */

/* ICONS SECTION */

/* FRAME */

.frame-trmd3 {
	background: linear-gradient(
		0deg,
		rgba(103, 80, 164, 0.05),
		rgba(103, 80, 164, 0.05)
	);
	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3),
		0px 1px 3px 1px rgba(0, 0, 0, 0.15);

	width: 97%;
	margin: 0 auto;
	overflow: clip;
	border-radius: 3px;
	align-items: center;
	justify-content: center;
	padding-top: 15px;
	padding-bottom: 15px;
}

